--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -42,6 +42,13 @@
 
         <div class="btn-toolbar navbar-btn navbar-right" role="toolbar">
           <div class="btn-group">
+            <div class="btn btn-toolbar btn-default">
+              <span id="volume-icon" class="glyphicon glyphicon-volume-up"></span>
+              <div id="volumeslider"></div>
+            </div>
+          </div>
+
+          <div class="btn-group">
             <button type="button" class="btn btn-default" onclick="socket.send('MPD_API_SET_PREV');">
               <span class="glyphicon glyphicon-backward"></span>
             </button>
@@ -55,20 +62,12 @@
               <span class="glyphicon glyphicon-forward"></span>
             </button>
           </div>
-          <div class="btn-group">
+          <div class="btn-group" style="display: none;">
             <button id="btnlove" type="button" class="btn btn-default" onclick="clickLove();">
               <span class="glyphicon glyphicon-heart"></span>
             </button>
           </div>
-<!--          
-          <div class="btn-group">
-            <div class="btn btn-toolbar btn-default">
-              <span id="volume-icon" class="glyphicon glyphicon-volume-up"></span>
-              <div id="volumeslider"></div>
-            </div>
-          </div>
--->
-           <div class="btn-group" role="group">
+           <div class="btn-group" role="group" style="display: none;">
             <audio id="player" preload="none"></audio>
             <button type="button" class="btn btn-default" onclick="clickLocalPlay()">
               <span id="localplay-icon" class="glyphicon glyphicon-play"></span>
@@ -78,7 +77,6 @@
             </button>
           </div>
        </div>
-          
         <form id="search" class="navbar-form navbar-right" role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search">
@@ -130,7 +128,7 @@
                 <th>Album</th>
                 <th>Title</th>
                 <th>Length</th>
-                <th></th>
+                <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
               </tr>
             </thead>
             <tbody>
