--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -41,13 +41,6 @@
 
         <div class="btn-toolbar navbar-btn navbar-right" role="toolbar">
           <div class="btn-group">
-            <div class="btn btn-toolbar btn-default">
-              <span id="volume-icon" class="glyphicon glyphicon-volume-up"></span>
-              <div id="volumeslider"></div>
-            </div>
-          </div>
-
-          <div class="btn-group">
             <button type="button" class="btn btn-default" onclick="socket.send('MPD_API_SET_PREV');">
               <span class="glyphicon glyphicon-backward"></span>
             </button>
@@ -61,12 +54,19 @@
               <span class="glyphicon glyphicon-forward"></span>
             </button>
           </div>
-          <div class="btn-group" style="display: none;">
+          <!-- <div class="btn-group">
             <button id="btnlove" type="button" class="btn btn-default" onclick="clickLove();">
               <span class="glyphicon glyphicon-heart"></span>
             </button>
+          </div> -->
+          <div class="btn-group">
+            <div class="btn btn-toolbar btn-default">
+              <span id="volume-icon" class="glyphicon glyphicon-volume-up"></span>
+              <div id="volumeslider"></div>
+              <span id="volume-number"></span>
+            </div>
           </div>
-           <div class="btn-group" role="group" style="display: none;">
+           <!-- <div class="btn-group" role="group">
             <audio id="player" preload="none"></audio>
             <button type="button" class="btn btn-default" onclick="clickLocalPlay()">
               <span id="localplay-icon" class="glyphicon glyphicon-play"></span>
@@ -74,8 +74,9 @@
             <button type="button" class="btn btn-default" onclick="window.open('/player.html');">
               <span id="localplay-icon" class="glyphicon glyphicon-new-window"></span>
             </button>
-          </div>
+          </div> -->
        </div>
+          
         <form id="search" class="navbar-form navbar-right" role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search">
@@ -91,7 +92,7 @@
       <div class="col-md-10 col-xs-12">
         <div class="notifications top-right"></div>
 
-        <div class="panel panel-primary">
+        <div class="panel panel-primary" style="position: sticky;top: 55px; z-index: 99;">
           <!-- Default panel contents -->
           <div class="panel-heading"><b id="panel-heading">Queue</b>
                                      <b id="panel-heading-info" class="text pull-right"></b></div>
@@ -99,6 +100,10 @@
             <h1>
               <span id="track-icon" onclick="clickPlay();" class="glyphicon glyphicon-play"></span>
               <span id="currenttrack"></span>
+              <span id="love" style="float: right;">
+                <button id="btnlove" type="button" class="btn btn-default" onclick="clickLove();">
+                <span class="glyphicon glyphicon-heart" style="color: red;"></span>
+            </button></span>
             </h1>
             <h4>
               <span id="artist" class="text"></span>
@@ -116,9 +121,8 @@
 
           <div class="col-md-12" id="filter">
           </div>
-
-
-          <!-- Table -->
+        </div><!-- /.panel -->
+        <!-- Table -->
           <table id="salamisandwich" class="table table-hover">
             <thead>
               <tr>
@@ -127,21 +131,19 @@
                 <th>Album</th>
                 <th>Title</th>
                 <th>Length</th>
-                <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                <th><div style="width: 15px;"></div></th>
               </tr>
             </thead>
             <tbody>
             </tbody>
           </table>
-
-        </div><!-- /.panel -->
         <ul class="pager">
           <li id="prev" class="page-btn hide"><a href="">Previous</a></li>
           <li id="next" class="page-btn"><a href="">Next</a></li>
         </ul>
       </div><!-- /.col-md-10 -->
 
-      <div class="col-md-2 col-xs-12">
+      <div class="col-md-2 col-xs-12" style="position: sticky;top: 55px;">
         <div class="btn-toolbar">
           <div class="btn-group-vertical btn-block btn-group-lg" data-toggle="buttons">
             <button id="btnrandom" type="button" class="btn btn-default">
